Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2344

Custom-made project wizard fails to copy PNG-graphics files to created project

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • Qt Creator 2.1.0
    • Qt Creator 2.0.0
    • All Other Issues
    • None
    • Win7 64-bit
    • 2c2f15dbc6726210a1d9208342158644fbb6e1fc

    Description

      When creating a custom wizard using the instructions from http://doc.qt.nokia.com/qtcreator-2.0/creator-project-creating.html I came up with this problem.

      I have a few PNG-graphics files that are a part of my project and I want the wizard to copy to the created project. Problem is that everytime I create a projects from the wizard the copied PNG-files are 0 bytes in length and empty files.

      They are defined normally like this inside the files-element:

      <file source="icon3.png" openeditor="false"/>

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            riussi Juha Ristolainen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes