Custom wizard: Introduce 'binary' attribute for source files.

Indicating the file is to be copied as is and not preprocessed.

Task-number: QTCREATORBUG-2344